# qgis_civiltools

./: .gitignore  README.md  __init__.py  civiltools.py  features.md  features.txt  metadata.txt  options.py  panels.md  pyproject.toml  settings.md
create_tools/: line_tool.py
map_tools/: base_context_menu.py  base_key_validator.py  base_map_tool.py  context_menus.py  key_validator.py  line_map_tool.py  select_tool.py  select_tool_new.py
resources/: cursor_builder.py  default.gpkg  icons.py  keycodes.toml  keycodes_sorted.csv
settings_tools/: gpkg_builder.py  init_dialog.py  init_error_dialog.py  options.py
